# goal-detector

./: .gitignore  README.md  pyproject.toml
notes/: DESIGN_DECISIONS.md
results/: smoke_Qwen__Qwen3-14B.jsonl  smoke_Qwen__Qwen3-32B.jsonl  smoke_qwen_nav.jsonl  v2_keepers.json
results/drift/: ab_drift_green_to_red.json  ab_drift_green_to_red_logit.json  ab_drift_green_to_red_long_logit.json  ablation_drift_1600.json  ablation_v13.json  ablation_v13_multilayer.json  compound_choice.json  compound_choice_12.json  compound_choice_mix60.json  compound_choice_mix60_r128.json  ia_v0_eval.json  (+10 more)
scripts/: probe_directions.py  smoke_qwen_nav.py
tests/: test_gridworld.py  test_oracle.py
training/: check_deceptive_behavior.py  compound_validation.py  config_sft.py  diagnose_probe.py  drift_causal_ablation.py  drift_eval.py  drift_gen_data.py  drift_run.py  drift_train.py  drift_train_probe.py  eval_ab_drift.py  eval_ab_drift_logit.py  eval_compound_choice.py  eval_key_door.py  eval_n_key_door.py  eval_trained.py  extract_activations.py  extract_base_first_paired.py  extract_paired_activations.py  gen_oracle_data.py  gen_prompted_rollouts.py  ia_data_gen.py  ia_eval.py  ia_train.py  iterative_probe_ensemble.py  iterative_probe_subspace.py  key_door_validation.py  launch_extract_activations.py  launch_extract_paired.py  launch_goal_specific.py  launch_goal_specific_v2.py  launch_rollouts.py  launch_validation.py  launch_validation_v2.py  match_distributions.py  multilayer_probe_ensemble.py  n_key_door_validation.py  plot_ab_drift.py  plot_ab_drift_logit.py  plot_all.py  (+27 more)
(+74 files in other folders)
