[project]
name = "goal-detector"
version = "0.0.1"
description = "Mechanistic goal detection via cross-model meta-classification"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
  "torch>=2.4",
  "transformers>=4.46",
  "accelerate>=1.0",
  "numpy>=2.0",
  "tqdm>=4.66",
  "typer>=0.12",
  "rich>=13.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
